step into the logic

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 <body>
     
     <section class="picturesSection">
-        <img class="picturesSelection" src="http://via.placeholder.com/300x200" alt="picture first">
-        <img class="picturesSelection" src="http://via.placeholder.com/300x200" alt="picture first">
-        <img class="picturesSelection" src="http://via.placeholder.com/300x200" alt="picture first">
+        <img class="picturesSelection" id="picOne" src="./img/bag.jpg" alt="picture first">
+        <img class="picturesSelection" id="picTwo" src="./img/banana.jpg" alt="picture second">
+        <img class="picturesSelection" id="picThree" src="./img/bathroom.jpg" alt="picture third">
     </section>
     <section class="radioSection">
-        <input class="radioButtons" type="radio" name="gender" value="male" checked>
-        <input class="radioButtons" type="radio" name="gender" value="male" checked>
-        <input class="radioButtons" type="radio" name="gender" value="male" checked>
+        <input class="radioButtons" id="radioFirst" type="radio">
+        <input class="radioButtons" id="radioSecond" type="radio">
+        <input class="radioButtons" id="radioThird" type="radio">
     </section>
 
 <section id="voteButton">
@@ -42,6 +42,7 @@
     
 <section class="resultsSection">
     <ul>
+
         <li>RESULT</li>
         <li>RESULT</li>
         <li>RESULT</li>
