--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
 </section>
     
 <section class="resultsSection">
-    <ul>
+    <h2>Total Votes:</h2>
+    <ul id="resultsList">
+
+        <!-- <li>RESULT</li>
+        <li>RESULT</li>
+        <li>RESULT</li>
+        <li>RESULT</li>
 
         <li>RESULT</li>
         <li>RESULT</li>
         <li>RESULT</li>
-        <li>RESULT</li>
-
-        <li>RESULT</li>
-        <li>RESULT</li>
-        <li>RESULT</li>
-        <li>RESULT</li>
+        <li>RESULT</li> -->
 
     </ul>
 </section>
