--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <script src="https://github.com/chartjs/Chart.js/releases/download/v2.7.2/Chart.min.js"></script>
     
 </head>
 <header>
@@ -66,7 +67,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis porttitor nibh. Integer nec hendrerit mauris, ut laoreet lacus. Fusce maximus neque quis dui tristique, eu congue eros ornare. Donec laoreet arcu vel mauris auctor egestas. Cras pellentesque massa lacus, a accumsan velit viverra quis. Nullam feugiat, nisl non vulputate malesuada, dolor ex tempor ipsum, ut placerat lectus erat quis quam. Nam vulputate tincidunt nunc vitae cursus. Ut nec vestibulum mi, vel pellentesque eros. Morbi in mauris euismod, commodo enim vitae, rutrum orci. Vivamus in purus dignissim, laoreet nibh et, porttitor enim. Mauris vitae nisl eget tortor sodales lobortis in eu magna. Fusce rhoncus consequat nibh, et pharetra augue eleifend et. Morbi a eros quis leo pharetra rutrum nec a enim. Nulla tincidunt eget diam convallis aliquet. Aliquam elementum tincidunt ex at scelerisque.</p>
 </section>
 
-    
+    <canvas id="myChart">
+
+    </canvas>
 </body>
 
 <footer>
