--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </section>
     <section class="radioSection">
 
-        <input class="radioButtons" id="radioOne" type="radio" name="Product" >
-        <input class="radioButtons" id="radioTwo" type="radio" name="Product" >
-        <input class="radioButtons" id="radioThree" type="radio" name="Product" >
+        <input class="radioButtons" id="radioOne" type="radio" name="Product" checked>
+        <input class="radioButtons" id="radioTwo" type="radio" name="Product">
+        <input class="radioButtons" id="radioThree" type="radio" name="Product">
 
     </section>
 
